# Too-Bee-Read

./: Cargo.toml
src/: api.rs  app.rs  main.rs  save.rs
src/app/: book_search.rs  mod.rs  window.rs
src/app/widgets/: book_widget.rs  mod.rs
