[package]
name = "too_bee_read"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"tokio" = { version = "1.21.0", features = ["full"] }
"reqwest" = "0.11.11"
"egui" = "0.19.0"
"eframe" = { version = "0.19.0", features = ["persistence"] }
"serde" = { version = "1.0.144", features = ["derive"] }
"serde_json" = "1.0.85"